--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
     <title>{{ title | default('eTraxis') }}</title>
 
     <link href="{{ asset('css/libs.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/' ~ theme ~ '/etraxis.min.css') }}" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
     <link rel="apple-touch-icon" href="{{ asset('apple-touch-icon.png')         }}">
