--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,7 +20,25 @@
     <![endif]-->
 </head>
 <body>
+    <nav>
+        <div class="container">
+            {% spaceless %}
+
+                <span class="fern"><a href="{{ path('homepage') }}"><img src="{{ asset('images/fern.png') }}"></a></span>
+
+                {% block menu %}{% endblock %}
+
+            {% endspaceless %}
+        </div>
+    </nav>
+
     {% block content %}{% endblock %}
+
+    <footer class="container">
+        <a href="https://www.etraxis.com/" target="_blank">Copyright &copy; Artem Rodygin</a>
+    </footer>
+
+    <div id="__etraxis_modal" class="ui-helper-hidden"></div>
 
     <script src="{{ asset('js/libs.min.js') }}"></script>
     <script src="{{ asset('js/etraxis-' ~ locale ~ '.min.js') }}"></script>
