--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,7 +26,17 @@
 
                 <span class="fern"><a href="{{ path('homepage') }}"><img src="{{ asset('images/fern.png') }}"></a></span>
 
+                {% if app.user and is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <span class="fern">{{ app.user.fullname }}</span>
+                {% endif %}
+
                 {% block menu %}{% endblock %}
+
+                {% if app.user and is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <a href="#" id="menu_logout">{{ 'security.log_out'|trans }}</a>
+                {% else %}
+                    <a href="{{ path('login') }}">{{ 'security.log_in'|trans }}</a>
+                {% endif %}
 
             {% endspaceless %}
         </div>
@@ -50,7 +60,15 @@
 
     <script>
         $(function() {
+
             $('body').initUI();
+
+            $('#menu_logout').click(function() {
+                eTraxis.confirm('{{ 'security.log_out'|trans }}', '{{ 'security.confirm_exit'|trans }}', function() {
+                    location.href = '{{ path('logout') }}';
+                });
+                return false;
+            });
         });
     </script>
 
