--- a/app/Resources/views/web/security/login.html.twig
+++ b/app/Resources/views/web/security/login.html.twig
@@ -32,6 +32,13 @@
 
                     <div class="columns control">
                         <div class="column one-third centered">
+                            <input type="checkbox" id="remember_me" name="_remember_me">
+                            <label for="remember_me">{{ 'security.remember_me'|trans }}</label>
+                        </div>
+                    </div>
+
+                    <div class="columns control">
+                        <div class="column one-third centered">
                             <input type="submit" value="{{ 'security.log_in'|trans }}">
                         </div>
                     </div>
