--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ locale }}">
+<html lang="{{ (app.user ? app.user.locale : locale) }}">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <title>{{ title | default('eTraxis') }}</title>
 
     <link href="{{ asset('css/libs.min.css') }}" rel="stylesheet">
-    <link href="{{ asset('css/' ~ theme ~ '/etraxis.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/' ~ (app.user ? app.user.theme : theme) ~ '/etraxis.min.css') }}" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
     <link rel="apple-touch-icon" href="{{ asset('apple-touch-icon.png')         }}">
@@ -55,7 +55,7 @@
     <div id="__etraxis_modal" class="ui-helper-hidden"></div>
 
     <script src="{{ asset('js/libs.min.js') }}"></script>
-    <script src="{{ asset('js/etraxis-' ~ locale ~ '.min.js') }}"></script>
+    <script src="{{ asset('js/etraxis-' ~ (app.user ? app.user.locale : locale) ~ '.min.js') }}"></script>
     <script src="{{ asset('js/etraxis.min.js') }}"></script>
 
     <script>
