--- a/app/Resources/views/admin/base.html.twig
+++ b/app/Resources/views/admin/base.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block menu %}
+
+    <a href="{{ path('admin_users') }}">{{ 'users'|trans }}</a>
+
 {% endblock %}
