--- a/app/Resources/public/less/etraxis.less
+++ b/app/Resources/public/less/etraxis.less
@@ -267,7 +267,7 @@ select {
 
 /* DataTables */
 
-table.datatable {
+table.dataTable {
     text-align: left;
 
     &.hover {
@@ -287,12 +287,6 @@ table.datatable {
             .DataTables_sort_wrapper {
                 padding-right: 0;
             }
-        }
-    }
-
-    td {
-        input[type="checkbox"] {
-            margin: 0 1px;
         }
     }
 }
