--- a/app/Resources/public/less/theme-emerald.less
+++ b/app/Resources/public/less/theme-emerald.less
@@ -27,9 +27,8 @@ a {
 }
 
 /* DataTables */
-table.datatable {
-    border-left: 1px solid #303030;
-    border-right: 1px solid #303030;
+
+table.dataTable {
 
     tbody tr {
         background-color: #fbfbfb;
