DataTables: row checkboxes

--- a/app/Resources/views/admin/users/index.html.twig
+++ b/app/Resources/views/admin/users/index.html.twig
@@ -24,7 +24,9 @@
 
     <script>
         $(function() {
-            $('#users').table();
+            $('#users').table({
+                checkboxes: 'users'
+            });
         });
     </script>
 
