--- a/app/Resources/public/less/theme-allblacks.less
+++ b/app/Resources/public/less/theme-allblacks.less
@@ -57,13 +57,15 @@ table.dataTable {
 
     &.row-border {
         tbody tr td {
-            border-top: 1px solid #333;
+            border-top: none;
+            border-bottom: 1px solid #333;
         }
     }
 
     &.cell-border {
         tbody tr td {
-            border-top: 1px solid #333;
+            border-top: none;
+            border-bottom: 1px solid #333;
             border-left: 1px solid #333;
             border-right: none;
         }
