--- a/app/Resources/public/less/etraxis.less
+++ b/app/Resources/public/less/etraxis.less
@@ -326,6 +326,12 @@ table.dataTable {
         width: inherit !important;
     }
 
+    th.sorting_disabled {
+        span.DataTables_sort_icon {
+            display: none;
+        }
+    }
+
     .dataTables_info {
         padding: 4px 0;
     }
