--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -2,6 +2,10 @@
 
 {% block content %}
 
-    <p>The requested page could not be found.</p>
+    <div class="columns">
+        <div class="column">
+            <p>The requested page could not be found.</p>
+        </div>
+    </div>
 
 {% endblock %}
