--- a/app/Resources/public/less/etraxis.less
+++ b/app/Resources/public/less/etraxis.less
@@ -82,11 +82,12 @@ a {
 
 .columns {
     .clearfix;
+    margin: 10px 0;
 }
 
 .column {
     float: left;
-    padding: 10px;
+    padding: 0 10px;
 }
 
 .one-third {
@@ -263,6 +264,12 @@ select {
     .ui-menu {
         position: absolute;
     }
+}
+
+/* jQuery UI */
+
+.ui-tabs .ui-tabs-panel {
+    padding: 0;
 }
 
 /* DataTables */
