--- a/app/Resources/public/less/theme-allblacks.less
+++ b/app/Resources/public/less/theme-allblacks.less
@@ -53,6 +53,18 @@ table.dataTable {
 
     tbody tr {
         background-color: #000;
+
+        &.red {
+            color: #ff6247;
+        }
+
+        &.blue {
+            color: #00638f;
+        }
+
+        &.gray {
+            color: gray;
+        }
     }
 
     &.row-border {
