--- a/app/Resources/public/less/theme-azure.less
+++ b/app/Resources/public/less/theme-azure.less
@@ -28,6 +28,24 @@ a {
 
 /* DataTables */
 
+table.dataTable {
+
+    tbody tr {
+
+        &.red {
+            color: #dc322f;
+        }
+
+        &.blue {
+            color: #3a8eb7;
+        }
+
+        &.gray {
+            color: darkgray;
+        }
+    }
+}
+
 .dataTables_wrapper {
 
     .dataTables_length,
