Fix layout grid

--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -2,9 +2,11 @@
 
 {% block content %}
 
-    <div class="columns">
-        <div class="column">
-            <p>The requested page could not be found.</p>
+    <div class="container">
+        <div class="columns">
+            <div class="column">
+                <p>The requested page could not be found.</p>
+            </div>
         </div>
     </div>
 
