--- a/app/Resources/views/admin/users/view.html.twig
+++ b/app/Resources/views/admin/users/view.html.twig
@@ -2,12 +2,14 @@
 
 {% block content %}
 
-    <div class="columns">
-        <div class="column full-width">
-            <div class="tabs" data-tab="{{ tab }}">
-                <ul>
-                    <li><a href="{{ path('admin_tab_user_details', {'id': user.id}) }}">{{ user.fullname }}</a></li>
-                </ul>
+    <div class="container">
+        <div class="columns">
+            <div class="column full-width">
+                <div class="tabs" data-tab="{{ tab }}">
+                    <ul>
+                        <li><a href="{{ path('admin_tab_user_details', {'id': user.id}) }}">{{ user.fullname }}</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
