--- a/app/Resources/views/web/security/login.html.twig
+++ b/app/Resources/views/web/security/login.html.twig
@@ -2,50 +2,54 @@
 
 {% block content %}
 
-    <div class="columns">
-        <div class="column full-width">
+    <div class="container">
+        <div class="columns">
+            <div class="column full-width">
 
-            {% if error %}
-                <div class="error">{{ error.message|trans }}</div>
-            {% endif %}
+                {% if error %}
+                    <div class="error">{{ error.message|trans }}</div>
+                {% endif %}
 
-            <form action="{{ path('login_check') }}" method="post">
-                <fieldset>
+                <form action="{{ path('login_check') }}" method="post">
+                    <fieldset>
+                        <div class="container">
 
-                    <div class="columns control">
-                        <div class="column one-third text-right">
-                            <label for="username">{{ 'user.email'|trans }}:</label>
+                            <div class="columns control">
+                                <div class="column one-third text-right">
+                                    <label for="username">{{ 'user.email'|trans }}:</label>
+                                </div>
+                                <div class="column one-third">
+                                    <input class="full-width" type="text" id="username" name="_username" placeholder="{{ 'required'|trans }}" value="{{ last_username }}">
+                                </div>
+                            </div>
+
+                            <div class="columns control">
+                                <div class="column one-third text-right">
+                                    <label for="password">{{ 'user.password'|trans }}:</label>
+                                </div>
+                                <div class="column one-third">
+                                    <input class="full-width" type="password" id="password" name="_password" placeholder="{{ 'required'|trans }}">
+                                </div>
+                            </div>
+
+                            <div class="columns control">
+                                <div class="column one-third centered">
+                                    <input type="checkbox" id="remember_me" name="_remember_me">
+                                    <label for="remember_me">{{ 'security.remember_me'|trans }}</label>
+                                </div>
+                            </div>
+
+                            <div class="columns control">
+                                <div class="column one-third centered">
+                                    <input type="submit" value="{{ 'security.log_in'|trans }}">
+                                </div>
+                            </div>
+
                         </div>
-                        <div class="column one-third">
-                            <input class="full-width" type="text" id="username" name="_username" placeholder="{{ 'required'|trans }}" value="{{ last_username }}">
-                        </div>
-                    </div>
+                    </fieldset>
+                </form>
 
-                    <div class="columns control">
-                        <div class="column one-third text-right">
-                            <label for="password">{{ 'user.password'|trans }}:</label>
-                        </div>
-                        <div class="column one-third">
-                            <input class="full-width" type="password" id="password" name="_password" placeholder="{{ 'required'|trans }}">
-                        </div>
-                    </div>
-
-                    <div class="columns control">
-                        <div class="column one-third centered">
-                            <input type="checkbox" id="remember_me" name="_remember_me">
-                            <label for="remember_me">{{ 'security.remember_me'|trans }}</label>
-                        </div>
-                    </div>
-
-                    <div class="columns control">
-                        <div class="column one-third centered">
-                            <input type="submit" value="{{ 'security.log_in'|trans }}">
-                        </div>
-                    </div>
-
-                </fieldset>
-            </form>
-
+            </div>
         </div>
     </div>
 
