--- a/app/Resources/views/admin/users/tab_details.html.twig
+++ b/app/Resources/views/admin/users/tab_details.html.twig
@@ -1,3 +1,5 @@
+{% import "macro.html.twig" as macro %}
+
 <div class="columns">
     <div class="column full-width">
         <button type="button" id="btn-back">{{ 'button.back'|trans }}</button>
@@ -15,39 +17,22 @@
 <div class="columns">
     <div class="column full-width">
         <fieldset>
-            <div class="columns">
-                <div class="column one-fourth">{{ 'user.username'|trans }}:</div>
-                <div class="column three-fourths">{{ user.username }}</div>
-            </div>
-            <div class="columns">
-                <div class="column one-fourth">{{ 'user.fullname'|trans }}:</div>
-                <div class="column three-fourths">{{ user.fullname }}</div>
-            </div>
-            <div class="columns">
-                <div class="column one-fourth">{{ 'user.email'|trans }}:</div>
-                <div class="column three-fourths">{{ user.email }}</div>
-            </div>
-            <div class="columns">
-                <div class="column one-fourth">{{ 'description'|trans }}:</div>
-                <div class="column three-fourths">{{ user.description }}</div>
-            </div>
-            <div class="columns">
-                <div class="column one-fourth">{{ 'permissions'|trans }}:</div>
-                <div class="column three-fourths">{{ user.admin ? 'role.administrator'|trans|lower : 'role.user'|trans|lower }}</div>
-            </div>
-            <div class="columns">
-                <div class="column one-fourth">{{ 'user.status'|trans }}:</div>
-                {% if user.accountNonLocked %}
-                <div class="column three-fourths">{{ user.disabled ? 'user.disabled'|trans|lower : 'user.enabled'|trans|lower }}</div>
-                {% else %}
-                <div class="column three-fourths">{{ 'user.locked'|trans|lower }}</div>
-                {% endif %}
-            </div>
+            {{ macro.row('user.username'|trans, user.username) }}
+            {{ macro.row('user.fullname'|trans, user.fullname) }}
+            {{ macro.row('user.email'|trans, user.email) }}
+            {{ macro.row('description'|trans, user.description) }}
+            {{ macro.row('permissions'|trans, user.admin ? 'role.administrator'|trans : 'role.user'|trans) }}
+            {% if user.accountNonLocked %}
+                {{ macro.row('user.status'|trans, user.disabled ? 'user.disabled'|trans : 'user.enabled'|trans) }}
+            {% else %}
+                {{ macro.row('user.status'|trans, 'user.locked'|trans|lower) }}
+            {% endif %}
         </fieldset>
     </div>
 </div>
 
 <script>
+
     $(function() {
 
         // "Back" button.
@@ -58,15 +43,16 @@
         // "Disable"/"Enable" button.
         $('#btn-disable').click(function() {
             $.post('{{ path(user.disabled ? 'admin_enable_user' : 'admin_disable_user', { 'ids': [user.id] }) }}', function() {
-                window.location.assign('{{ path('admin_view_user', { 'id': user.id }) }}');
+                window.location.assign('{{ path('admin_view_user', {'id': user.id}) }}');
             });
         });
 
         // "Unlock" button.
         $('#btn-unlock').click(function() {
-            $.post('{{ path('admin_unlock_user', { 'id': user.id }) }}', function() {
-                window.location.assign('{{ path('admin_view_user', { 'id': user.id }) }}');
+            $.post('{{ path('admin_unlock_user', {'id': user.id}) }}', function() {
+                window.location.assign('{{ path('admin_view_user', {'id': user.id}) }}');
             });
         });
     });
+
 </script>
