--- a/app/Resources/views/web/security/login.html.twig
+++ b/app/Resources/views/web/security/login.html.twig
@@ -16,7 +16,7 @@
 
                             <div class="columns control">
                                 <div class="column one-third text-right">
-                                    <label for="username">{{ 'user.email'|trans }}:</label>
+                                    <label for="username">{{ 'user.username'|trans }}:</label>
                                 </div>
                                 <div class="column one-third">
                                     <input class="full-width" type="text" id="username" name="_username" placeholder="{{ 'required'|trans }}" value="{{ last_username }}">
