--- a/app/Resources/public/less/nav.less
+++ b/app/Resources/public/less/nav.less
@@ -1,7 +1,7 @@
 nav {
     background: url("images/mainmenu-bg.png") repeat;
 
-    .container {
+    .content {
         background: url("images/mainmenu-splitter.png") repeat-y top left;
 
         > a {
