--- a/app/Resources/views/web/security/login.html.twig
+++ b/app/Resources/views/web/security/login.html.twig
@@ -15,7 +15,7 @@
                         <div class="container">
 
                             <div class="columns control">
-                                <div class="column one-third text-right">
+                                <div class="column one-third label">
                                     <label for="username">{{ 'user.username'|trans }}:</label>
                                 </div>
                                 <div class="column one-third">
@@ -24,7 +24,7 @@
                             </div>
 
                             <div class="columns control">
-                                <div class="column one-third text-right">
+                                <div class="column one-third label">
                                     <label for="password">{{ 'user.password'|trans }}:</label>
                                 </div>
                                 <div class="column one-third">
