--- a/app/Resources/views/admin/users/tab_details.html.twig
+++ b/app/Resources/views/admin/users/tab_details.html.twig
@@ -35,6 +35,12 @@
 
     $(function() {
 
+        function reloadTab() {
+            var $tabs = $('#btn-back').closest('.tabs');
+            var current = $tabs.tabs('option', 'active');
+            $tabs.tabs('load', current);
+        }
+
         // "Back" button.
         $('#btn-back').click(function() {
             window.location.assign('{{ path('admin_users') }}');
@@ -42,15 +48,15 @@
 
         // "Disable"/"Enable" button.
         $('#btn-disable').click(function() {
-            $.post('{{ path(user.disabled ? 'admin_enable_user' : 'admin_disable_user', { 'ids': [user.id] }) }}', function() {
-                window.location.assign('{{ path('admin_view_user', {'id': user.id}) }}');
+            $.post('{{ path(user.disabled ? 'admin_enable_user' : 'admin_disable_user') }}', { ids: [{{ user.id }}] }, function() {
+                reloadTab();
             });
         });
 
         // "Unlock" button.
         $('#btn-unlock').click(function() {
             $.post('{{ path('admin_unlock_user', {'id': user.id}) }}', function() {
-                window.location.assign('{{ path('admin_view_user', {'id': user.id}) }}');
+                reloadTab();
             });
         });
     });
