Submitted forms data

--- a/app/Resources/public/less/etraxis.less
+++ b/app/Resources/public/less/etraxis.less
@@ -314,6 +314,12 @@ select {
     padding: 0;
 }
 
+p.ui-state-highlight,
+p.ui-state-error {
+    padding: 5px 8px;
+    text-align: left;
+}
+
 /* DataTables */
 
 table.dataTable {
