Edit user's password

--- a/app/Resources/views/admin/users/dlg_user.html.twig
+++ b/app/Resources/views/admin/users/dlg_user.html.twig
@@ -7,6 +7,8 @@
         {{ form_row(form.fullname) }}
         {{ form_row(form.email) }}
         {{ form_row(form.description) }}
+        {{ form_row(form.password) }}
+        {{ form_row(form.confirmation) }}
         {{ form_row(form.admin) }}
         {{ form_row(form.disabled) }}
     </fieldset>
