--- a/app/Resources/views/admin/users/tab_details.html.twig
+++ b/app/Resources/views/admin/users/tab_details.html.twig
@@ -57,7 +57,7 @@
             {% endif %}
 
             $('#dlg-user').modal({
-                title: '{{ 'Edit account'|trans }}',
+                title: '{{ user.fullname }}',
                 success: function() {
                     reloadTab();
                     return true;
